Reduces specificity of HTML dark mode Safari link colour fix

--- a/src/scss/admin/mixins/_general.scss
+++ b/src/scss/admin/mixins/_general.scss
@@ -65,19 +65,19 @@
   text-decoration-thickness: .08em;
 
   &:link,
-  &:visited:visited {
+  &:visited {
     color: $colour-primary;
     @include dark-mode($colour: $colour-dark-mode-primary);
     @include high-contrast($colour: $colour-dark-mode-primary-lighter);
   }
 
-  &:hover:hover {
+  &:hover {
     color: $colour-primary-darker;
     @include dark-mode($colour: $colour-dark-mode-primary-lighter);
     @include high-contrast($colour: $colour-high-contrast-primary-lighter);
   }
 
-  &:active:active {
+  &:active {
     color: $colour-black;
     @include dark-mode($colour: $colour-dark-mode-white);
   }
